[gd_scene load_steps=10 format=3 uid="uid://tf3srtbe3prm"]

[ext_resource type="Script" uid="uid://dt4ey86pebuw5" path="res://Scripts/pause_menu.gd" id="1_f76h7"]
[ext_resource type="Theme" uid="uid://bgcbi5sd70bfd" path="res://Themes/frozen_dark/themes/ui_button_main.tres" id="1_ikb1m"]
[ext_resource type="Theme" uid="uid://05h73wxcxmxi" path="res://Themes/frozen_dark/themes/title.tres" id="3_h454b"]
[ext_resource type="Texture2D" uid="uid://dpwynai0dduyr" path="res://Themes/frozen_dark/gui/coin.svg" id="4_hovkl"]
[ext_resource type="Theme" uid="uid://d3x48jpexgh64" path="res://Themes/frozen_dark/themes/title_nobg.tres" id="4_lgtbf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogj78"]
content_margin_left = 12.0
content_margin_right = 12.0
bg_color = Color(1, 0.5, 0.541667, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="Animation" id="Animation_jv4kh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/MainMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:anchor_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Blur:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VBoxContainer/Restart:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Stats:size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(495, 80)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Stats:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 176)]
}

[sub_resource type="Animation" id="Animation_rqiab"]
resource_name = "open"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 24]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBoxContainer/Play:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer/Settings:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.1, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("VBoxContainer/MainMenu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.15, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Label:anchor_left")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Label:anchor_right")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [0.5, 1.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Blur:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(0.25, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("VBoxContainer/Restart:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Stats:size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0, 80), Vector2(495, 80)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Stats:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.1, 0.35),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(257, 176), Vector2(9, 176)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7kxvx"]
_data = {
&"RESET": SubResource("Animation_jv4kh"),
&"open": SubResource("Animation_rqiab")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_f76h7")

[node name="Blur" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 8.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = 128.0
grow_horizontal = 2
theme = ExtResource("3_h454b")
text = "KEY_PAUSE"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1
visible_characters = 0
visible_ratio = 0.0

[node name="Stats" type="Panel" parent="."]
clip_contents = true
offset_left = 257.0
offset_top = 176.0
offset_right = 257.0
offset_bottom = 256.0
theme = ExtResource("1_ikb1m")

[node name="Coins" type="Label" parent="Stats"]
layout_mode = 0
offset_left = 79.0
offset_top = 18.0
offset_right = 151.0
offset_bottom = 70.0
theme = ExtResource("4_lgtbf")
text = "427"

[node name="Coin" type="TextureRect" parent="Stats/Coins"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.423
anchor_bottom = 0.423
offset_left = -56.0
offset_top = -23.996
offset_right = -8.0
offset_bottom = 24.004
texture = ExtResource("4_hovkl")
expand_mode = 1
stretch_mode = 4

[node name="BestScoreLabel" type="Label" parent="Stats"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -231.0
offset_top = 2.0
offset_right = -16.0
offset_bottom = 42.0
grow_horizontal = 0
theme = ExtResource("4_lgtbf")
theme_override_colors/font_color = Color(0.690196, 0.741176, 1, 1)
theme_override_font_sizes/font_size = 24
text = "KEY_BEST_SCORE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BestScore" type="Label" parent="Stats/BestScoreLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 32.0
offset_right = 80.0
offset_bottom = 77.0
theme = ExtResource("4_lgtbf")
theme_override_font_sizes/font_size = 36
text = "128"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 9.0
offset_top = -121.0
offset_right = -8.0
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Play" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_ikb1m")
theme_override_font_sizes/font_size = 64
text = "KEY_RESUME"
clip_text = true

[node name="Restart" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_ikb1m")
theme_override_font_sizes/font_size = 64
text = "KEY_RESTART"
clip_text = true

[node name="Settings" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_ikb1m")
theme_override_font_sizes/font_size = 64
text = "KEY_SETTINGS"
clip_text = true

[node name="MainMenu" type="Button" parent="VBoxContainer"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
theme = ExtResource("1_ikb1m")
theme_override_font_sizes/font_size = 64
theme_override_styles/pressed = SubResource("StyleBoxFlat_ogj78")
text = "KEY_MAIN_MENU"
clip_text = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
&"": SubResource("AnimationLibrary_7kxvx")
}

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
